# pre-commit-hooks

./: .coverage  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  justfile  pyproject.toml  requirements.txt  scrap.py
foo/: my_doc_script.py  my_script.py
scripts/: __init__.py  add_from_future.py  emit_requirements.py
scripts/utils/: git_utils.py
src/ahooks/: __init__.py  _exceptions.py  _types.py  add_from_future.py  emit_requirements.py  env_skeleton.py  export.py  sequence_not_str.py
src/ahooks/hooks/: add_from_future.py  allow_unused_required_imports.py  emit_requirements.py  env_skeleton.py
src/ahooks/models/: __init__.py  _repo_registry.py  converters.py  hookConfigBlock.py  preCommitConfigYaml.py  repoConfigBlock.py
src/ahooks/utils/: __init__.py  _ast_utils.py  _click_utils.py  _file_utils.py  _nobeartype.py  _preCommitConfigBlock.py  _yaml.py  click_utils.py  file_utils.py  git_utils.py  preCommitConfigBlock.py  preCommitConfigYaml.py
src/pre_commit_hooks/: add_from_future.py  emit_requirements.py  env_skeleton.py
src/pre_commit_hooks/utils/: __init__.py  git_utils.py
tests/: .test.pre-commit-config.yaml  .test.pre-commit-hooks.yaml  allow_unused_required_imports_test.py  conftest.py  export_test.py  hookConfigBlock_test.py  preCommitConfigYaml_test.py  smoke_test.py  strategies.py  temp-config.yaml  temp.yaml
